# octostore.io

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md  install.sh  openapi.yaml
.github/workflows/: ci.yml  daily-report.yml  deploy.yml  external-uptime.yml  monitoring.yml  no-ai-authors.yml  release.yml
benches/: lock_benchmarks.rs
data/: uptime.jsonl
deploy/: deploy.sh  octostore.io.caddy
design/: og-card.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_auth_header.rs  fuzz_json_body.rs  fuzz_lock_name.rs
scripts/: ci-local.sh
sdks/csharp/: OctoStore.csproj  OctoStoreClient.cs
sdks/go/: README.md  client.go  errors.go  go.mod  types.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/io/octostore/: OctoStoreClient.java
sdks/java/src/main/java/io/octostore/exceptions/: Exceptions.java
sdks/java/src/main/java/io/octostore/model/: AcquireResult.java  LockStatus.java  Models.java
sdks/php/: composer.json
sdks/php/src/: Client.php
sdks/python/: README.md  pyproject.toml
sdks/python/octostore/: __init__.py  client.py  exceptions.py  models.py
sdks/ruby/: octostore.gemspec
sdks/ruby/lib/: octostore.rb
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
site/: admin.html  dashboard.html  index.html  sdks.html  status.html
site/agents/: index.html
site/assets/: site.css  site.js
site/blog/: agents-are-cheap-collisions-are-expensive.html  distributed-locking-for-hosted-agents.html  index.html  leader-election-is-easy-until-the-leader-disappears.html
site/coordination/: index.html
site/docs/: agent-coordination.html  agent-orchestration.html  coordination-patterns.html  examples.html  index.html  local-coordination.html  multi-machine-coordination.html  overview.html  releases.html
site/leader-election/: index.html
src/: app.rs  auth.rs  config.rs  configstore.rs  elections.rs  error.rs  flags.rs  lib.rs  locks.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  ratelimit.rs  sessions.rs  store.rs  webhooks.rs
