[package]
name = "octostore"
version = "0.1.0"
edition = "2021"

[lib]
name = "octostore"
path = "src/lib.rs"

[[bin]]
name = "octostore-test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "octostore-bench"
path = "src/bin/benchmark.rs"

[profile.profiling]
inherits = "release"
debug = true  # Keep debug symbols for flame graphs

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.21"
rand = "0.8"
urlencoding = "2.1"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"

[[bench]]
name = "lock_benchmarks"
harness = false

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"