[package]
name = "octostore-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
urlencoding = "2.1"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.octostore]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_lock_name"
path = "fuzz_targets/fuzz_lock_name.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_auth_header"  
path = "fuzz_targets/fuzz_auth_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_body"
path = "fuzz_targets/fuzz_json_body.rs"
test = false
doc = false
bench = false