[package]
name = "octostore"
version = "1.0.0"
edition = "2021"
authors = ["OctoStore <support@octostore.io>"]
description = "Rust client SDK for OctoStore distributed lock service"
license = "MIT"
repository = "https://github.com/octostore/octostore.io"
homepage = "https://github.com/octostore/octostore.io"
documentation = "https://docs.rs/octostore"
keywords = ["distributed-locks", "concurrency", "synchronization", "async", "tokio"]
categories = ["asynchronous", "concurrency", "network-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time"] }
thiserror = "1.0"
url = "2.4"
regex = "1.10"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = []
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]